Updated pipfile with linting

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 pytest = "*"
 flask = "*"
+pylint = "*"
+autopep8 = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.7"
