--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ pylint = "*"
 autopep8 = "*"
 flake8 = "*"
 flask-swagger-ui = "*"
+coverage = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.7"
