--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,35 @@
+astroid==2.4.1
 attrs==19.3.0
+autopep8==1.5.2
+click==7.1.2
+coverage==5.1
+dnspython==1.16.0
+entrypoints==0.3
+flake8==3.7.9
+Flask==1.1.2
+flask-swagger-ui==3.25.0
 importlib-metadata==1.6.0
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
 more-itertools==8.2.0
 packaging==20.3
 pluggy==0.13.1
 py==1.8.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylint==2.5.2
+pymongo==3.10.1
 pyparsing==2.4.7
-pytest==5.4.1
+pytest==5.4.2
+pytest-cov==2.8.1
 six==1.14.0
+toml==0.10.0
+typed-ast==1.4.1
 wcwidth==0.1.9
+Werkzeug==1.0.1
+wrapt==1.12.1
 zipp==3.1.0
